# basic-contracts-of-dharitri

crypto-zombies/: Cargo.toml
crypto-zombies/meta/: Cargo.toml
crypto-zombies/output/: crypto-zombies.abi.json  crypto-zombies.imports.json  crypto-zombies.mxsc.json  crypto-zombies.wasm
crypto-zombies/src/: crypto_kitty_proxy.rs  crypto_zombies.rs  storage.rs  zombie_factory.rs  zombie_feading.rs  zombies.rs
crypto-zombies/tests/: crypto_zombies_scenario_go_test.rs  crypto_zombies_scenario_rs_test.rs
crypto-zombies/wasm/: Cargo.toml
crypto-zombies/wasm/src/: lib.rs
farm-staking/: Cargo.toml
farm-staking/meta/: Cargo.toml
farm-staking/output/: farm-staking.mxsc.json  farm-staking.wasm
farm-staking/output-from-docker/: artifacts.json
farm-staking/scenarios/: farm_staking.scen.json  interactor_trace.scen.json
farm-staking/src/: farm_staking.rs
farm-staking/tests/: farm_staking_blackbox_test.rs  farm_staking_blackbox_upgrade_test.rs  farm_staking_blackbox_with_values_test.rs  farm_staking_scenario_go_test.rs  (+3 more)
workshop/: Cargo.toml  trace1.scen.json
workshop/meta/: Cargo.toml
workshop/meta/src/: main.rs
workshop/output/: workshop.abi.json  workshop.mxsc.json  workshop.wasm
workshop/scenarios/: interactor_trace.scen.json  workshop.scen.json
workshop/src/: workshop.rs
workshop/tests/: workshop_blackbox_test.rs  workshop_blackbox_upgrade_test.rs  workshop_blackbox_with_values_test.rs  workshop_scenario_go_test.rs  workshop_scenario_rs_test.rs  workshop_test.rs  workshop_whitebox_test.rs
workshop/wasm/: Cargo.toml
workshop/wasm/src/: lib.rs
(+7 files in other folders)
