[package]
name = "crypto-zombies"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/crypto_zombies.rs"

[dependencies.dharitri-sc]
version = "0.14.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.dharitri-sc-scenario]
version = "0.14.1"

[workspace]
members = [
    ".",
    "meta",
]
